2004-09-04  Florian Boor  <florian.boor@kernelconcepts.de>

    * namedetail.c: Changed packing.

2004-08-25  Florian Boor  <florian.boor@kernelconcepts.de>

    Released Version 0.28
    * Makefile: Updated version number.
    * main.c: Support of some standard hotkeys (Ctrl+q, Ctrl+n...)
    * db.c: We support contacts without name now.
    * main.c: Added exception list of fields not to show in overview.
    * editing.c: Update categories list on abort, categories might have changed.
    * *.xml: Added company name.
    * main.c: get_tag_name(): Worked only on first page, fixed it.

2004-08-24  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c: Added missing population of categories display.
    * db.c: Fixed warning.

2004-08-23  Florian Boor  <florian.boor@kernelconcepts.de>
    
    * main.c: Fixed category update.
    * Released V 0.27
    * contacts-alternate-bigscreen.xml: New file.
    * Makefile: Added method to install alternate contact layout with broken 
                down address field.
    * Makefile: V 0.27
    * db.c: Fixed "MODIFIED" tag multiplication.
    * editing.c: Removed obsolete store_special_fields(), retrieve_special_fields()
    * main.c, editing.c, db.c: Several major bugfixes in category handling.
    * main.c: Automatic update of display after edit and deleting.

2004-08-20  Florian Boor  <florian.boor@kernelconcepts.de>

    * Released V 0.26
    * Makefile: New version.
    * editing.c: Implemented setting of name detail fields from name field.
    
2004-08-17  Florian Boor  <florian.boor@kernelconcepts.de>

    * editing.c: Implemented filter to allow not to enter everythign in 
                 number fields.
	* editing.c, namedetail.c: Fixed name setup for new contacts.
    * editing.c: Make name field activated per default.
    * Released Version 0.25

2004-08-10  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Finished vcard import, disabled broken dialog.