@@ -1,6 +1,0 @@
-TAB=a-e abcde
-TAB=f-j fghij
-TAB=k-o klmno
-TAB=p-s pqurs
-TAB=t-z tuvwxyz
-TAB=andere !abcdefghijklmnopqrstuvwxyz
